--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </table>
   <hr>
   <h3>Skills</h3>
-  <table cellspacing="10">
+  <table cellspacing="10" margin="2">
     <tr>
       <td>
         <table>
